resources/css/style.css
/* PROBLEMS:
  MISSION TEXT should have smaller top and smaller black margin form the image
  TEA OF THE MONTH problem with line spacing
  THE HEADER IS NOT FIXED
*/


body {
  font-family: Helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
}


/* HEADER */

header {
  display: fixed;
  height: 69px;
}

.menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header img {
  padding-left: 10px;
  height: 50px;
}

.menubuttons nav a {
  text-decoration: underline;
  color: seashell;
}


/* CONTENT */
.content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* OUR MISSION */
.mission {
  display: flex;
  flex-direction: column;
  background-image: url("../images/img-mission-background.jpg");
  height: 700px;
  width: 1200px;
  justify-content: center;
}

.mission_text {
  background-color: black;
}


/* TEA OF THE MONTH */
.featured_tea {
  display: flex;
  width: 1000px;
  justify-content: space-around;
}

.featured_tea img {
  width: 300px;
  height: 200px;
}

.featured_tea_description {
  display: flex;
  justify-content: space-around;
  width: 1000px;
  padding-top: 10px;
}

/* SI PUO' RAZIONALIZZARE QUANTO SEGUE ANZICHE' CREANDO UNA NUOVA CLASSE A PARTE CHE E RIDONDANTE CON QUELLE DELLA PRIMA RIGA DI IMMAGINI,
UTILIZZARE LA VECCHIA CLASSE PIU' UN'ALTRA CHE FACCIA UN OVERRIDE DELLA LARGHEZZA CON QUESTA RIDOTTA DI 660PX */

.featured_tea2 {
  display: flex;
  padding-top: 20px;
  width: 660px;
  justify-content: space-around;
}

.featured_tea2 img {
  width: 300px;
  height: 200px;
}

.featured_tea_description2 {
  display: flex;
  justify-content: space-around;
  width: 660px;
  padding-top: 10px;
}

/* LOCATIONS */
.locations {
  display: flex;
  background-image: url("../images/img-locations-background.jpg");
  height: 500px;
  flex-direction: column;
  width: 1200px;
  position: relative;
  margin-top: 70px;
  padding-top: 50px;
}

.cities {
  display: flex;
  justify-content: center;
}

.city {
  opacity: 1;
  width: 300px;
  background-color: black;
  margin-left: 20px;
  margin-right: 20px;
  height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

/* CONTACTS */
.contacts {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 200px;
  padding-top: 10px;
}

/* FOOTER */
footer {
  text-align: left;
  padding-left: 20px;
}

